--- a/css/contact.css
+++ b/css/contact.css
@@ -23,7 +23,7 @@
     animation-duration: 1s;
     animation-iteration-count: 1;
 }
-.notfound{
+.form{
     animation-name: fade;
     animation-duration: 1s;
     animation-iteration-count: 1;
