文字サイズ調整PT3
相対パス神

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ img{
 /* 左 */
 .left{
     background-color: #FCFCFC;
+    font-size: 1vw;
     display: flex;
     justify-content: center;
     align-items: center;
