--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ img{
 }
 .left #copyright{
     position: absolute;
-    bottom: 0.5em;
+    bottom: 0;
     font-family: a-otf-jun-pro, sans-serif;
     font-weight: 300;
     font-style: normal;
