Lighthouse Score Up

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ img{
     user-zoom: none;
 	-webkit-user-drag: none;
 	user-select: none;
+    width: auto;
+    height: auto;
 }
 
 /* 左右に並べるよー */
